--- a/index-dev.html
+++ b/index-dev.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -90,14 +92,17 @@
                                 <div class="effet"></div>
                             </div>
                             <p>
-                                Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation, l’éducation STEM et la compétition F1 in School. 
+                                Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation,
+                                l’éducation STEM et la compétition F1 in School.
 
-                                Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir un partenaire clé de notre succès.
+                                Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir un
+                                partenaire clé de notre succès.
 
                                 Ascenta concept est une écurie de Formule 1 miniaturisée participante au concours F1 In
                                 School.
 
-                                Notre écurie est composée d'étudiants passionnées qui veulent par la suite se faire une identité ainsi qu'un réseau dans ce monde du sport automobile.
+                                Notre écurie est composée d'étudiants passionnées qui veulent par la suite se faire une
+                                identité ainsi qu'un réseau dans ce monde du sport automobile.
                             </p>
 
                             <a href="#membre-equipe" class="button" style="margin-top: 30px;">Découvrir l’équipe</a>
@@ -122,13 +127,13 @@
                             </div>
                             <div class="projet-card">
                                 <div><img style="width: 100%; height: 100%; border-radius: 22px"
-                                        src="./assets/images/Illustration.png" /></div>
+                                        src="./assets/images/Illustration.png" alt="visuel-projet-1"></div>
                                 <div><img style="width: 100%; height: 100%; border-radius: 22px"
-                                        src="./assets/images/Illustration.png" /></div>
+                                        src="./assets/images/Illustration.png" alt="visuel-projet-2"></div>
                                 <div><img style="width: 100%; height: 100%; border-radius: 22px"
-                                        src="./assets/images/Illustration.png" /></div>
+                                        src="./assets/images/Illustration.png" alt="visuel-projet-3"></div>
                                 <div><img style="width: 100%; height: 100%; border-radius: 22px"
-                                        src="./assets/images/Illustration.png" /></div>
+                                        src="./assets/images/Illustration.png" alt="visuel-projet-4"></div>
                             </div>
                             <a href="#" class="button">Découvrir</a>
                         </div>
@@ -144,32 +149,36 @@
                                 <div class="membre" id="membre-equipe">
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
-                                            <p>role</p>
+                                            <h3><span class="span-effect">A</span>dam <span
+                                                    class="span-effect">R</span>obin</h3>
+                                            <p>Chargé de communication</p>
                                         </div>
 
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
+                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Adam ROBIN">
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
-                                            <p>role</p>
+                                            <h3><span class="span-effect">E</span>nzo
+                                                <span class="span-effect">C</span>orbet</h3>
+                                            <p>Concepteur 3D</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
+                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Enzo CORBET">
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
-                                            <p>role</p>
+                                            <h3><span class="span-effect">N</span>oa <span
+                                                    class="span-effect">L</span>asseu</h3>
+                                            <p>Designer</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
+                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Noa LASSEU">
                                     </div>
                                     <div>
                                         <div class="membre-info">
-                                            <h3><span class="span-effect">R</span>omain <span class="span-effect">G</span>rosjean</h3>
-                                            <p>role</p>
+                                            <h3><span class="span-effect">Y</span>oni <span
+                                                    class="span-effect">G</span>iraudet</h3>
+                                            <p>assistant général</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" />
+                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Yoni GIRAUDET">
                                     </div>
                                 </div>
                             </div>
