--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>La truite</title>
-    <meta name="description" content="">
+    <title>Ascenta Concept</title>
+    <meta name="description" content="This web site is for F1 competition.">
+    <link rel="icon" href="./assets/images/Logo_site_main.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/620fc58eba.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
