--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="global-header">
         <div id="header-wrapper">
             <div class="left-panel">
-                <a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt=""></a>
+                <a href="./index.html"><img src="./assets/images/Logo_site_main.png" alt="logo_ascenta"></a>
             </div>
             <div class="right-panel">
                 <i class="fa-solid fa-bars" style="color: #FF5959;"></i>
