--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                             <p>Chargé de communication</p>
                                         </div>
 
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Adam ROBIN">
+                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);"></div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -163,7 +163,7 @@
                                                 <span class="span-effect">C</span>orbet</h3>
                                             <p>Concepteur 3D</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Enzo CORBET">
+                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221353_802.jpg);"></div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -171,7 +171,7 @@
                                                     class="span-effect">L</span>asseu</h3>
                                             <p>Designer</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Noa LASSEU">
+                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221347_397.jpg);"></div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -179,7 +179,7 @@
                                                     class="span-effect">G</span>iraudet</h3>
                                             <p>assistant général</p>
                                         </div>
-                                        <img style="border-radius: 22px" src="https://via.placeholder.com/271x219" alt="Yoni GIRAUDET">
+                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);"></div>
                                     </div>
                                 </div>
                             </div>
