--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="home-text">
                         <h2>“Le début d’une nouvelle ère”</h2>
-                        <a href="#" class="button">En savoir plus</a>
+                        <a href="#a-propos" class="button">En savoir plus</a>
                     </div>
                     <div class="home-bg-effet"></div>
                 </div>
@@ -106,7 +106,7 @@
                                 identité ainsi qu'un réseau dans ce monde du sport automobile.
                             </p>
 
-                            <a href="#membre-equipe" class="button" style="margin-top: 30px;">Découvrir l’équipe</a>
+                            <a href="#visuel" class="button" style="margin-top: 30px;">Découvrir l’équipe</a>
 
                         </div>
 
@@ -212,16 +212,16 @@
                 <div class="footer-contact">
                     <div>
                         <i class="fa-solid fa-phone" style="color: #FF5959;"></i>
-                        <p>+33 66 66 77 78</p>
+                        <p>+33 7 69 00 81 44</p>
                     </div>
                     <div>
                         <i class="fa-solid fa-envelope" style="color: #FF5959;"></i>
-                        <p>test@test.test</p>
+                        <p>ascenta.concept1@gmail.com</p>
                     </div>
                     <div>
                         <i class="fa-solid fa-location-dot" style="color: #FF5959;"></i>
-                        <p>2 lot. de la croix lanauve,
-                            16000 Angoulême</p>
+                        <p>10 rue Etoc Demazy,
+                            72100 Mans</p>
                     </div>
                 </div>
 
