--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="./index.html">Accueil</a>
                     <a href="./index.html#a-propos">à propos</a>
                     <a href="./index.html#visuel">Visuels</a>
-                    <a href="./index.html#membre-equipe">Équipe</a>
+                    <a href="./index.html#visuel">Équipe</a>
                     <a href="./index.html#infos-footer">Contact</a>
                 </nav>
             </div>
