--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                                             <p>Chargé de communication</p>
                                         </div>
 
-                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);"></div>
+                                        <div class="photo-membre"
+                                            style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);">
+                                        </div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -163,7 +165,9 @@
                                                 <span class="span-effect">C</span>orbet</h3>
                                             <p>Concepteur 3D</p>
                                         </div>
-                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221353_802.jpg);"></div>
+                                        <div class="photo-membre"
+                                            style="background-image: url(./assets/images/IMG_20231126_221353_802.jpg);">
+                                        </div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -171,7 +175,9 @@
                                                     class="span-effect">L</span>asseu</h3>
                                             <p>Designer</p>
                                         </div>
-                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221347_397.jpg);"></div>
+                                        <div class="photo-membre"
+                                            style="background-image: url(./assets/images/IMG_20231126_221347_397.jpg);">
+                                        </div>
                                     </div>
                                     <div>
                                         <div class="membre-info">
@@ -179,7 +185,9 @@
                                                     class="span-effect">G</span>iraudet</h3>
                                             <p>assistant général</p>
                                         </div>
-                                        <div class="photo-membre" style="background-image: url(./assets/images/IMG_20231126_221359_570.jpg);"></div>
+                                        <div class="photo-membre"
+                                            style="background-image: url(./assets/images/IMG_20231126_221359_570.jpg);">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
