--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                 <h2>Competition F1 : participation</h2>
 
                 <div>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://instagram.com/ascentaconcept?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.tiktok.com/@ascenta.concept?_t=8hOLUxdzRVB&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
             </div>
             <div>
