--- a/index.html
+++ b/index.html
@@ -42,16 +42,13 @@
     </header>
 
     <div id="mobile_header">
-        
         <div>
-
             <i class="fa-solid fa-xmark" id="btn_close_mobile_header"></i>
-
             <nav>
                 <a href="./index.html">Accueil</a>
                 <a href="./index.html#a-propos">à propos</a>
                 <a href="./index.html#visuel">Visuels</a>
-                <a href="./index.html#visuel">Équipe</a>
+                <a href="./index.html#membre-equipe">Équipe</a>
                 <a href="./index.html#infos-footer">Contact</a>
             </nav>
         </div>
@@ -242,7 +239,7 @@
                     </div>
                     <div>
                         <i class="fa-solid fa-envelope" style="color: #FF5959;"></i>
-                        <p style="font-size: min(20px, 1vw);">ascenta.concept01@gmail.com</p>
+                        <p style="font-size: medium;">ascenta.concept01@gmail.com</p>
                     </div>
                     <div>
                         <i class="fa-solid fa-location-dot" style="color: #FF5959;"></i>
