--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
             <div class="container">
                 <div class="row">
                     <!-- Swiper -->
-                    <div class="swiper mySwiper">
+                    <div class="swiper mySwiper" style="    z-index: -1;">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <video autoplay muted loop class="home_video">
+                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video">
                                     <source src="./assets/videos/home_1.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay muted loop class="home_video">
+                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video" controls="false">
                                     <source src="./assets/videos/home_2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay muted loop class="home_video">
+                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video" controls="false">
                                     <source src="./assets/videos/home_3.mp4" type="video/mp4">
                                 </video>
                             </div>
