Create new html file for the member of the project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="./index.html">Accueil</a>
                     <a href="./index.html#a-propos">à propos</a>
                     <a href="./index.html#visuel">Visuels</a>
-                    <a href="./index.html#visuel">Équipe</a>
+                    <a href="./pages/membre.html">Équipe</a>
                     <a href="./index.html#infos-footer">Contact</a>
                 </nav>
             </div>
@@ -48,14 +48,14 @@
                 <a href="./index.html">Accueil</a>
                 <a href="./index.html#a-propos">à propos</a>
                 <a href="./index.html#visuel">Visuels</a>
-                <a href="./index.html#membre-equipe">Équipe</a>
+                <a href="./pages/membre.html">Équipe</a>
                 <a href="./index.html#infos-footer">Contact</a>
             </nav>
         </div>
     </div>
 
     <main>
-
+        <!--    TO-DO : Download low videos quality for mobile devices  -->
         <div class="scroll s-one" data-section-name="s-one">
             <div class="container">
                 <div class="row">
@@ -63,17 +63,17 @@
                     <div class="swiper mySwiper" style="    z-index: -1;">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
                                     <source src="./assets/videos/home_1.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video" controls="false">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
                                     <source src="./assets/videos/home_2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="home_video" controls="false">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
                                     <source src="./assets/videos/home_3.mp4" type="video/mp4">
                                 </video>
                             </div>
@@ -203,6 +203,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <a href="./pages/membre.html" class="button">En savoir plus</a>
                             </div>
                         </div>
                     </div>
