Update new page membre.html

--- a/pages/membre.html
+++ b/pages/membre.html
@@ -71,7 +71,7 @@
                                     </div>
 
                                     <div class="photo-membre"
-                                        style="background-image: url(./assets/images/IMG_20231126_221353_802.jpg);">
+                                        style="background-image: url(./../assets/images/IMG_20231126_221353_802.jpg);">
                                     </div>
                                 </div>
                                 <div>
@@ -81,7 +81,7 @@
                                         <p>Concepteur 3D</p>
                                     </div>
                                     <div class="photo-membre"
-                                        style="background-image: url(./assets/images/IMG_20231126_221359_570.jpg); ">
+                                        style="background-image: url(./../assets/images/IMG_20231126_221359_570.jpg); ">
                                     </div>
                                 </div>
                                 <div>
@@ -91,7 +91,7 @@
                                         <p>Designer</p>
                                     </div>
                                     <div class="photo-membre"
-                                        style="background-image: url(./assets/images/IMG_20231126_221347_397.jpg);">
+                                        style="background-image: url(./../assets/images/IMG_20231126_221347_397.jpg);">
                                     </div>
                                 </div>
                                 <div>
@@ -101,7 +101,7 @@
                                         <p>assistant général</p>
                                     </div>
                                     <div class="photo-membre"
-                                        style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);">
+                                        style="background-image: url(./../assets/images/IMG_20231126_221351_104.jpg);">
                                     </div>
                                 </div>
                             </div>
