--- a/index.html
+++ b/index.html
@@ -63,17 +63,20 @@
                     <div class="swiper mySwiper" style="    z-index: -1;">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin
+                                    class="home_video">
                                     <source src="./assets/videos/home_1.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin
+                                    class="home_video">
                                     <source src="./assets/videos/home_2.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="swiper-slide">
-                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin class="home_video">
+                                <video autoplay loop="loop" muted controls webkit-playsinline playsinlin
+                                    class="home_video">
                                     <source src="./assets/videos/home_3.mp4" type="video/mp4">
                                 </video>
                             </div>
@@ -152,6 +155,7 @@
                             <a href="#" class="button">Découvrir</a>
                         </div>
 
+                        <!--    TO-DO : Do the css of this section. PS : Check FIGMA.-->
                         <div class="notre-equipe" id="membre-equipe">
                             <div class="equipe-wrapper">
                                 <div>
@@ -161,47 +165,27 @@
                                     <p>"Ascenta Concept, que la vitesse monte en flèche"</p>
                                 </div>
                                 <div class="membre">
-                                    <div>
-                                        <div class="membre-info">
-                                            <h3><span class="span-effect">A</span>dam <span
-                                                    class="span-effect">R</span>obin</h3>
-                                            <p>Chargé de communication</p>
-                                        </div>
+                                    <img src="./assets/images/IMG_20231126_221444_519.jpg" alt="Notre Equipe !" style="display: inline-block; width: 50%;">
+                                    <p style="    display: inline-block;
+                                    width: 50%;
+                                    overflow-wrap: break-word;
+                                    font-size: large;
+                                    padding: 20px;
+                                    text-align: left;">Bienvenue chez Ascenta Concept, une écurie scolaire passionnée par l’innovation,
+                                        l’éducation STEM et la compétition F1 in School.
 
-                                        <div class="photo-membre"
-                                            style="background-image: url(./assets/images/IMG_20231126_221353_802.jpg);">
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="membre-info">
-                                            <h3><span class="span-effect">E</span>nzo
-                                                <span class="span-effect">C</span>orbet</h3>
-                                            <p>Concepteur 3D</p>
-                                        </div>
-                                        <div class="photo-membre"
-                                            style="background-image: url(./assets/images/IMG_20231126_221359_570.jpg); ">
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="membre-info">
-                                            <h3><span class="span-effect">N</span>oa <span
-                                                    class="span-effect">L</span>asseu</h3>
-                                            <p>Designer</p>
-                                        </div>
-                                        <div class="photo-membre"
-                                            style="background-image: url(./assets/images/IMG_20231126_221347_397.jpg);">
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="membre-info">
-                                            <h3><span class="span-effect">Y</span>oni <span
-                                                    class="span-effect">G</span>iraudet</h3>
-                                            <p>assistant général</p>
-                                        </div>
-                                        <div class="photo-membre"
-                                            style="background-image: url(./assets/images/IMG_20231126_221351_104.jpg);">
-                                        </div>
-                                    </div>
+                                        Nous vous invitons à rejoindre notre aventure éducative excitante et à devenir
+                                        un
+                                        partenaire clé de notre succès.
+
+                                        Ascenta concept est une écurie de Formule 1 miniaturisée participante au
+                                        concours F1 In
+                                        School.
+
+                                        Notre écurie est composée d'étudiants passionnées qui veulent par la suite se
+                                        faire une
+                                        identité ainsi qu'un réseau dans ce monde du sport automobile.
+                                    </p>
                                 </div>
                                 <a href="./pages/membre.html" class="button">En savoir plus</a>
                             </div>
@@ -209,7 +193,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer id="infos-footer">
